Enhance MCP configuration and security measures
- Updated server host binding to localhost for security.
- Added validation to ensure MCP servers use localhost addresses.
- Introduced optional authentication token in MCP server configuration.
- Updated protocol version to 2024-11-05.
- Changed transport protocol to streamable-http for improved functionality.
- Implemented session management with automatic handling of session IDs.
- Documented alignment with 2025 MCP best practices.

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # Server Configuration
 server:
-  host: "0.0.0.0"
+  host: "127.0.0.1"  # SECURITY: Bind to localhost only, not all interfaces
   port: 8000
   cors_origins:
     - "http://localhost:3000"
@@ -24,12 +24,14 @@ openai:
 mcp:
   enabled: true
   servers: []
-  # Example server configuration:
+  # Example server configuration following 2025 best practices:
   # servers:
   #   - name: "example-server"
-  #     url: "http://localhost:3000"
-  #     transport: "http"
+  #     url: "http://127.0.0.1:3000"  # Localhost only for security
+  #     transport: "streamable-http"   # Modern transport
   #     timeout: 30
+  #     auth_token: "${MCP_AUTH_TOKEN}"  # Optional authentication
+  #     bind_localhost: true           # Security enforcement
 
 # Logging Configuration
 logging:
