--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "structlog>=24.4.0",
     "python-dotenv>=1.0.0",
+    "ddgs>=9.0.0",
 ]
 
 [project.optional-dependencies]
@@ -85,5 +86,6 @@ skip_covered = false
 dev = [
     "mypy>=1.16.1",
     "pre-commit>=4.2.0",
+    "ruff>=0.12.2",
     "types-pyyaml>=6.0.12.20250516",
 ]
